--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "react-test-renderer": "16.8.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(react-native|react-navigation)/)"
+    ],
+    "setupFiles": [
+      "./jest-setup.js"
+    ]
   }
 }
