adding storybook component testing

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest",
-    "storybook": "storybook start"
+    "storybook": "storybook start -p 7007"
   },
   "dependencies": {
     "react": "16.8.3",
@@ -17,6 +17,13 @@
     "@babel/core": "7.4.4",
     "@babel/runtime": "7.4.4",
     "@storybook/react-native": "^4.1.18",
+    "@storybook/addon-actions": "^4.1.18",
+    "@storybook/addon-links": "^4.1.18",
+    "@storybook/addon-knobs": "^4.1.0-alpha.1",
+    "@storybook/addon-ondevice-knobs": "^4.1.18",
+    "@storybook/addon-notes": "^4.1.18",
+    "@storybook/addon-ondevice-notes": "^4.1.18",
+    "@storybook/addons": "^4.1.18",
     "babel-jest": "24.8.0",
     "jest": "24.8.0",
     "metro-react-native-babel-preset": "0.54.1",
