--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.2.1",
     "react-native-vector-icons": "^6.4.2",
+    "react-native-i18n": "^2.0.14",
     "react-navigation": "^3.10.1"
   },
   "devDependencies": {
